<resources>
    <string name="app_name">Blizzard Leaderboards</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_character">Character Activity</string>
    <string name="sort_by_position">Sort by Position</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_realm">Sort by Realm</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_season_wins">Sort by Season Wins</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="arena2v2">Arena 2v2</string>
    <string name="arena3v3">Arena 3v3</string>
    <string name="arena5v5">Arena 5v5</string>
    <string name="ratedbg">Rated Battlegrounds</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>
    <string name="search_hint">Search name or realm</string>
    <string name="search">Search</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="region_host">Region Host</string>
    <string name="summary_region_pref">Current region is %s</string>
    <string name="error_layout">Ops! Error retrieving data, swipe down to try again.</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="ranking">Ranking</string>
    <string name="rating">Rating</string>
    <string name="realm">Realm</string>
    <string name="season_wins">Season Wins</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="alliance">Alliance</string>
    <string name="horde">Horde</string>
    <string name="death_kinght">Death Knight</string>
    <string name="druid">Druid</string>
    <string name="hunter">Hunter</string>
    <string name="mage">Mage</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="priest">Priest</string>
    <string name="rogue">Rogue</string>
    <string name="shaman">Shaman</string>
    <string name="warlock">Warlock</string>
    <string name="warrior">Warrior</string>
    <string name="blood_elf">Blood Elf</string>
    <string name="draenei">Draenei</string>
    <string name="dwarf">Dwarf</string>
    <string name="gnome">Gnome</string>
    <string name="goblin">Goblin</string>
    <string name="human">Human</string>
    <string name="night_elf">Night Elf</string>
    <string name="orc">Orc</string>
    <string name="pandaren">Pandaren</string>
    <string name="tauren">Tauren</string>
    <string name="troll">Troll</string>
    <string name="undead">Undead</string>
    <string name="worgen">Worgen</string>
    <string name="order_filter">Order and Filter</string>
    <string name="world_of_warcraft">World of Warcraft</string>

</resources>
